# qualitos

./: .coverage  .dependency-check-suppressions.xml  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .trivyignore  CLAUDE.md  README.md  docker-compose.dast.yml  docker-compose.dev.yml  docker-compose.lite.yml  pom.xml
.githooks/: pre-commit
.github/: CI_SETUP.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: chaos.yml  ci.yml  perf-k6.yml  release.yml
.zap/: rules.tsv
apps/ai-service/: Dockerfile  __init__.py  main.py  pyproject.toml
apps/ai-service/application/: __init__.py
apps/ai-service/application/usecase/: __init__.py  anomaly_detect.py  complaint_analyze.py  complete_text.py  federated_train_round.py  generate_norm_doc.py  mock_audit.py  nlq_ask.py  predict.py  rag_query.py  spc_detect.py  transcribe.py
apps/ai-service/domain/: __init__.py
apps/ai-service/domain/model/: __init__.py  anomaly.py  complaint.py  completion.py  errors.py  mock_audit.py  nlq.py  normdoc.py  predict.py  rag.py  spc.py  tenant.py  transcription.py
apps/ai-service/domain/port/: __init__.py  ai_provider.py  embedder.py  federated_client.py  pii_filter.py  prompt_audit_logger.py  prompt_injection_filter.py  sql_executor.py  sql_validator.py  vector_store.py
apps/ai-service/domain/service/: __init__.py  chart_inferrer.py  complaint_nlp.py  forecasting.py  isolation_forest.py  mock_audit_parser.py  narrative_builder.py  nc_clustering.py  reconstruction.py  shap_kernel.py  spc_rules.py  supplier_scoring.py
apps/ai-service/domain/service/ml_backends/: __init__.py  cluster_hdbscan.py  forecast_lstm.py  forecast_prophet.py  sentiment_bert.py  transcribe_whisper.py
apps/ai-service/federated/: __init__.py  config.py  flower_client.py  opt_in_federated_client.py
apps/ai-service/infrastructure/: __init__.py  ai_provider_base.py
apps/ai-service/infrastructure/auth/: __init__.py  keycloak_jwks_validator.py
apps/ai-service/infrastructure/guardrails/: __init__.py  heuristic_injection_filter.py  heuristic_pii_filter.py  presidio_pii_filter.py
apps/ai-service/infrastructure/nlq/: __init__.py  in_memory_executor.py  jdbc_readonly_executor.py  sqlglot_validator.py
apps/ai-service/infrastructure/persistence/: __init__.py  json_prompt_audit_logger.py
apps/ai-service/infrastructure/providers/: __init__.py  _allowlist.py  anthropic_provider.py  mistral_provider.py  ollama_provider.py
apps/ai-service/infrastructure/vector/: __init__.py  bge_m3_embedder.py  in_memory_vector_store.py  qdrant_vector_store.py
apps/ai-service/models/qualitos-sql/: Modelfile  Modelfile.lite  README.md  build-qualitos-sql.sh
apps/ai-service/presentation/: __init__.py  app.py  container.py  provider_defaults.py  security.py
apps/ai-service/presentation/routers/: __init__.py  anomaly_router.py  complaint_router.py  completion_router.py  federated_router.py  health_router.py  nlq_router.py  predict_router.py  rag_router.py  spc_router.py  standards_router.py  transcription_router.py
apps/ai-service/presentation/schemas/: __init__.py  anomaly.py  common.py  complaint.py  completion.py  federated.py  mock_audit.py  nlq.py  normdoc.py  predict.py  rag.py  spc.py  transcription.py
apps/ai-service/tests/: conftest.py
apps/ai-service/tests/application/: test_anomaly_detect_usecase.py  test_complete_text_usecase.py  test_federated_usecase.py  test_generate_norm_doc_usecase.py  test_mock_audit_usecase.py  test_nlq_usecase.py
apps/ai-service/tests/domain/: test_chart_inferrer.py  test_complaint_nlp.py  test_completion_model.py  test_forecasting.py  test_isolation_forest.py  test_ml_backends.py  test_mock_audit_model.py  test_mock_audit_parser.py  test_nc_clustering.py  test_nlq_model.py  test_normdoc_model.py  test_reconstruction.py  test_shap_kernel.py  test_spc_rules.py  test_supplier_scoring.py
apps/ai-service/tests/infrastructure/: test_audit_logger.py  test_in_memory_executor.py  test_injection_filter.py  test_keycloak_dev_validator.py  test_pii_filter.py  test_provider_responses.py  test_vector_store.py
apps/ai-service/tests/nlq_adversarial/: test_sqlglot_validator_adversarial.py
apps/ai-service/tests/presentation/: test_anomaly_router.py  test_complaint_router.py  test_complete_router.py  test_predict_router.py  test_provider_allowlist.py  test_provider_defaults.py  test_router_smoke.py  test_spc_router.py  test_standards_router.py  test_transcription_router.py
apps/ai-vision-5s/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
apps/ai-vision-5s/app/: __init__.py  main.py
apps/ai-vision-5s/app/application/: __init__.py  use_cases.py
apps/ai-vision-5s/app/domain/: __init__.py  analyzer.py  models.py
apps/ai-vision-5s/app/infrastructure/: __init__.py  auth.py  backend_factory.py  image_safety.py  onnx_backend.py
apps/ai-vision-5s/app/presentation/: __init__.py  dtos.py  routes.py
apps/ai-vision-5s/models/: vision5s-toy.onnx
apps/ai-vision-5s/scripts/: export_5s_model.py
apps/ai-vision-5s/tests/: conftest.py
apps/ai-vision-5s/tests/application/: test_use_cases.py
apps/ai-vision-5s/tests/domain/: test_analyzer.py
apps/ai-vision-5s/tests/infrastructure/: test_auth.py  test_image_safety.py  test_onnx_backend.py  test_onnx_real_model.py
apps/ai-vision-5s/tests/presentation/: test_routes.py
apps/api-core/: Dockerfile  pom.xml
docs/: AUDIT-realisation-2026-06-15.md  AUDIT-stub-vs-reel.md  PLAN-pilier-confiance.md  ROADMAP-vers-100.md  STATUS-P1.md  STATUS-P3.md  STATUS-P4.md  STATUS-P5.md  VISION.md  git-workflow.md  web-design-system.md  web-i18n.md  web-ng0100.md  web-performance.md  web-pwa-offline.md
infra/edge/inference/: Dockerfile  README.md  pyproject.toml
infra/edge/inference/edge_inference/: __init__.py
infra/edge/inference/edge_inference/domain/: __init__.py  buffer.py  inference.py  models.py
infra/edge/inference/edge_inference/infrastructure/: __init__.py  backend_factory.py  file_store.py  onnx_backend.py
infra/edge/inference/tests/: test_backend_factory.py  test_buffer.py  test_file_store.py  test_inference.py
(+3128 files in other folders)
