[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qualitos-ai-service"
version = "0.1.0"
description = "QualitOS AI gateway — completion, RAG, NLQ, federated scaffold"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "httpx>=0.27",
    "sqlglot>=25.5",
    "pyjwt[crypto]>=2.9",
    "slowapi>=0.1.9",
    # Optional in dev; pinned in prod images.
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    "qdrant-client>=1.11",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "import-linter>=2.0",
    "ruff>=0.6",
]
ml = [
    "FlagEmbedding>=1.2.10",
    "torch>=2.5",
    "transformers>=4.45",
    "flwr>=1.10",
    "opacus>=1.5",
]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --cov=domain --cov=application --cov=infrastructure --cov=presentation --cov=federated --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.importlinter]
root_packages = ["domain", "application", "infrastructure", "presentation", "federated"]

[[tool.importlinter.contracts]]
name = "Domain has no infra/presentation/framework imports"
type = "forbidden"
source_modules = ["domain"]
forbidden_modules = [
    "fastapi",
    "pydantic",
    "sqlglot",
    "httpx",
    "psycopg",
    "qdrant_client",
    "presidio_analyzer",
    "presidio_anonymizer",
    "presentation",
    "infrastructure",
]

[[tool.importlinter.contracts]]
name = "Application depends on domain only (no infrastructure or presentation)"
type = "forbidden"
source_modules = ["application"]
forbidden_modules = ["infrastructure", "presentation", "fastapi", "sqlglot", "httpx"]
